--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@types/react-router-dom": "^5.3.3",
+    "@types/webpack-env": "^1.17.0",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
